--- a/windows/requirements.txt
+++ b/windows/requirements.txt
@@ -13,6 +13,8 @@ blinker==1.4
 Brotli==1.0.9
 bs4==0.0.1
 cachetools==4.2.1
+cairocffi==1.3.0
+CairoSVG==2.5.2
 cchardet==2.1.7
 certifi==2022.6.15
 cffi==1.15.0
@@ -24,10 +26,13 @@ colour==0.1.5
 constantly==15.1.0
 cryptography==37.0.2
 cssselect==1.1.0
+cssselect2==0.6.0
 dataclasses==0.6
 decorator==4.4.2
+defusedxml==0.7.1
 discord.py==1.7.3
 docopt==0.6.2
+drawSvg==1.8.3
 elastic-transport==8.1.2
 elasticsearch==8.2.3
 fake-useragent==0.1.11
@@ -84,6 +89,7 @@ pytz==2022.1
 PyWavelets==1.3.0
 pywin32-ctypes==0.2.0
 queuelib==1.6.2
+reportlab==3.6.11
 requests==2.28.0
 requests-file==1.5.1
 requests-toolbelt==0.9.1
@@ -98,7 +104,9 @@ six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+svglib==1.4.1
 termcolor==1.1.0
+tinycss2==1.1.1
 tldextract==3.3.0
 tqdm==4.64.0
 trio==0.21.0
@@ -111,6 +119,7 @@ urllib3==1.26.9
 w3lib==1.22.0
 wayback==0.3.2
 wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==2.0.3
 wsproto==1.1.0
 yarg==0.1.9
