--- a/windows/requirements.txt
+++ b/windows/requirements.txt
@@ -1,128 +1,3 @@
-aiodns==3.0.0
-aiohttp==3.7.4.post0
-aiohttp-socks==0.7.1
-altgraph==0.17
-anyio==3.6.1
-async-generator==1.10
-async-timeout==3.0.1
-attrs==20.3.0
-Automat==20.2.0
-beautifulsoup4==4.11.1
-beautifultable==1.1.0
-blinker==1.4
-Brotli==1.0.9
-bs4==0.0.1
-cachetools==4.2.1
-cairocffi==1.3.0
-CairoSVG==2.5.2
-cchardet==2.1.7
-certifi==2022.6.15
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.12
-chromedriver-autoinstaller==0.3.1
-colorama==0.4.5
 colour==0.1.5
-constantly==15.1.0
-cryptography==37.0.2
-cssselect==1.1.0
-cssselect2==0.6.0
-dataclasses==0.6
-decorator==4.4.2
-defusedxml==0.7.1
-discord.py==1.7.3
-docopt==0.6.2
-drawSvg==1.8.3
-elastic-transport==8.1.2
-elasticsearch==8.2.3
-fake-useragent==0.1.11
-filelock==3.7.1
-future==0.18.2
-geographiclib==1.52
-geopy==2.2.0
-googletransx==2.4.2
-h11==0.12.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==0.15.0
-httpx==0.23.0
-hyperframe==6.0.1
-hyperlink==21.0.0
-idna==3.1
-ImageHash==4.2.1
-imageio==2.19.3
-imageio-ffmpeg==0.4.7
-incremental==21.3.0
-itemadapter==0.6.0
-itemloaders==1.0.4
-jmespath==1.0.1
-kaitaistruct==0.9
-lcu-driver==2.1.3
-lxml==4.9.0
-moviepy==1.0.3
-multidict==5.1.0
 numpy==1.22.4
-opencv-python==4.6.0.66
-outcome==1.2.0
-pandas==1.4.2
-parsel==1.6.0
-pefile==2019.4.18
-Pillow==9.1.1
-pipreqs==0.4.11
-proglog==0.1.10
-Protego==0.2.1
-psutil==5.8.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycares==4.1.2
-pycparser==2.21
-PyDispatcher==2.0.5
-pydivert==2.1.0
-pyinstaller==4.2
-pyinstaller-hooks-contrib==2021.1
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-socks==2.0.3
-pytz==2022.1
-PyWavelets==1.3.0
-pywin32-ctypes==0.2.0
-queuelib==1.6.2
-reportlab==3.6.11
-requests==2.28.0
-requests-file==1.5.1
-requests-toolbelt==0.9.1
-rfc3986==1.5.0
-schedule==1.1.0
-scipy==1.8.1
-Scrapy==2.6.1
-selenium==4.2.0
-selenium-wire==4.6.4
-service-identity==21.1.0
-six==1.16.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-svglib==1.4.1
-termcolor==1.1.0
-tinycss2==1.1.1
-tldextract==3.3.0
-tqdm==4.64.0
-trio==0.21.0
-trio-websocket==0.9.2
-twint==2.1.21
-Twisted==22.4.0
-twisted-iocpsupport==1.0.2
-typing-extensions==3.7.4.3
-urllib3==1.26.9
-w3lib==1.22.0
-wayback==0.3.2
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.3
-wsproto==1.1.0
-yarg==0.1.9
-yarl==1.6.3
-zope.interface==5.4.0
-zstandard==0.17.0
+opencv_python==4.6.0.66
